# aster

./: .gitignore  Cargo.toml  Dioxus.toml  build  build-tw  build.rs  index.html  input.css  output.css  package-lock.json  package.json
assets/: tailwind.css
asteris_radix/: Cargo.toml
asteris_radix/src/: database.rs  main.rs  model.rs  server.rs  transaction.rs
model/: Cargo.toml
model/src/: model.rs
radix_asteris/: Cargo.toml  Dioxus.toml  build.rs  input.css  radix_asteris.db
radix_asteris/assets/: tailwind.css
radix_asteris/src/: database.rs  forms.rs  main.rs  model.rs  queries.rs  server.rs  transaction.rs
radix_asteris/src/forms/: accounts.rs  inventory.rs  log.rs  menu.rs  sql.rs  swagger.rs
radix_asteris/src/forms/accounts/: edit.rs
src/: app.rs  assets.rs  components.rs  forms.rs  main.rs  model.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: button.rs  layout.rs  mod.rs  searchbox.rs  sidebar.rs  table.rs
src/forms/: account.rs  account_management.rs  balance.rs  inventory_management.rs  menu.rs  mod.rs  register.rs
src/forms/balance/: account_ops.rs  update.rs
src/forms/register/: payment.rs
