[package]
name = "asteris_radix"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive"] }
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
