[package]
name = "radix_asteris"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }

clap = { version = "4.5.37", features = ["derive"] }
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
