[package]
name = "radix_asteris"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }

clap = { version = "4.5.37", features = ["derive"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
colored = "3.0.0"
open = "5.3.2"
ratatui = "0.29.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
simplelog = "0.12.2"
log = "0.4.27"
chrono = "0.4.41"
futures = "0.3.31"
