[package]
name = "radix_asteris"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }

clap = { version = "4.5.37", features = ["derive"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
open = "5.3.2"
simplelog = "0.12.2"
log = "0.4.27"
chrono = "0.4.41"
futures = "0.3.31"
dioxus = { version = "0.6.3", features = ["desktop"] }
itertools = "0.14"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
